feat: add password reset response page

--- a/public/common/notifications.css
+++ b/public/common/notifications.css
@@ -1,6 +1,12 @@
 .notif-controls {
     display: flex;
+    justify-content: flex-end;
     gap: var(--small-gap);
+    cursor: default;
+}
+
+.notif-button {
+    display: inline;
 }
 
 .notif-expiry {
