fix: reset pw to old pw

--- a/views/resetPassword.hbs
+++ b/views/resetPassword.hbs
@@ -1,3 +1,4 @@
+<div id="resetPasswordPage" data-error="{{error}}">
 <div class="card">
     <form class="edit-profile-details" action="/api/reset/password/{{resetUser._id}}" method="post">
         <div class="form-page-container">
