--- a/views/partials/teamMember.hbs
+++ b/views/partials/teamMember.hbs
@@ -3,8 +3,7 @@
     data-bio="{{bio}}"
     data-role="{{role}}"
 >
-    <div class="team-member-picture" style="background-image: url('{{pfp}}');"></div>
-    
+    <img class="team-member-picture" src="{{pfp}}"></img>
     <div class="team-member-details">
         <span id="full-name">{{firstName}} {{lastName}}</span>
         <span id="role">{{role}}</span>
