--- a/views/partials/teamMemberMini.hbs
+++ b/views/partials/teamMemberMini.hbs
@@ -8,7 +8,7 @@
     data-lastName="{{lastName}}"
     type="button"
 >
-    <div class="team-member-mini-picture" style="background-image: url('{{pfp}}');"></div>
+    <img class="team-member-mini-picture" src="{{pfp}}"></img>
     <span id="full-name">{{firstName}} {{lastName}}</span>
     <span id="role">{{role}}</span>
     <i id="teamMiniAddButton" class="lni lni-plus"></i>
