--- a/public/common/global.css
+++ b/public/common/global.css
@@ -239,7 +239,7 @@ textarea {
 }
 
 .team-member-mini-picture {
-    height: 100%;
+    height: 2rem;
     aspect-ratio: 1;
     background-color: var(--page-bg);
     border-radius: var(--circle-radius);
