--- a/views/partials/teamMember.hbs
+++ b/views/partials/teamMember.hbs
@@ -3,7 +3,7 @@
     data-bio="{{bio}}"
     data-role="{{role}}"
 >
-    <img class="team-member-picture" src="{{pfp}}"></img>
+    <img class="team-member-picture" src="/api/avatar/{{_id}}"></img>
     <div class="team-member-details">
         <span id="full-name">{{firstName}} {{lastName}}</span>
         <span id="role">{{role}}</span>
