--- a/views/eventDetails.hbs
+++ b/views/eventDetails.hbs
@@ -221,7 +221,7 @@
                     button.setAttribute('data-bio', participant.bio || '');
 
                     button.innerHTML = `
-                        <div class="team-member-mini-picture" style="background-image: url('${participant.pfp || ''}');"></div>
+                        <img class="team-member-mini-picture" src="/api/avatar/${member._id}" />
                         <span id="full-name">${participant.firstName ?? ''} ${participant.lastName ?? ''}</span>
                         <span id="role">${participant.role || 'Team Member'}</span>
                         <i id="teamMiniAddButton" class="lni lni-plus"></i>
