fix: prevent accidental form submission on hitting the enter key

--- a/views/eventCreate.hbs
+++ b/views/eventCreate.hbs
@@ -1,4 +1,4 @@
-<DIV class="form-wizard card">
+<div class="form-wizard card">
     <form class="form" action="/create/createEvent" method="post">
         <div class="form-page-container">
             <div class="form-page" id="detailsPage">
@@ -156,4 +156,4 @@
         <input type="hidden" id="added-suppliers-input" name="addedSuppliers">
 
     </form>
-</DIV>
+</div>
