--- a/views/profileEdit.hbs
+++ b/views/profileEdit.hbs
@@ -71,7 +71,7 @@
                 </div>
                 <input id="pfpUpload" name="pfp-upload" type="file" accept=".jpg,.png,.jpeg,.JPG,.PNG,.JPEG,image/jpeg,image/png" />
                 <div class="form-controls">
-                    <button type="submit" class="disabled-button fg-button button" id="editPfpButton">
+                    <button type="submit" class="disabled-button fg-button button" id="editPfpButton" disabled>
                         <div class="button-wrapper">
                             <i class="lni lni-floppy-disk-1"></i>
                             <p>Save</p>
