--- a/views/partials/supplierMini.hbs
+++ b/views/partials/supplierMini.hbs
@@ -1,6 +1,7 @@
 <button class="team-member-mini-card"
     data-id="{{_id}}"
     data-company="{{companyName}}"
+    data-status="{{status}}"
     type="button"
 >
     <div class="team-member-mini-picture" style="background-image: url('/images/default-supplier.png');"></div>
