--- a/public/common/global.css
+++ b/public/common/global.css
@@ -765,6 +765,7 @@ button.disabled-button:hover .button-wrapper {
     pointer-events: none;
     opacity: 0;
     transition: opacity 0.15s, top 0.15s;
+    z-index: 100;
 }
 
 .dropdown-open .dropdown-content {
@@ -1261,6 +1262,10 @@ button.disabled-button:hover .button-wrapper {
 
     .attendance-box-text {
         display: none;
+    }
+
+    .dropdown-content {
+        width: 100%;
     }
 }
 
