frontend edit event shows date

--- a/views/editEvent.hbs
+++ b/views/editEvent.hbs
@@ -50,11 +50,11 @@
                 <div class="form-row">
                     <div class="text-field-container">
                         <label class="field-label" for="start-date">Start date</label>
-                        <input type="date" id="start-date" class="text-field" name="start-date" required>
+                        <input type="date" id="start-date" class="text-field" name="start-date" value="{{event.formattedStartDate}}" required>
                     </div>
                     <div class="text-field-container">
                         <label class="field-label" for="end-date">End date</label>
-                        <input type="date" id="end-date" class="text-field" name="end-date" required>
+                        <input type="date" id="end-date" class="text-field" name="end-date" value="{{event.formattedEndDate}}" required>
                     </div>
                 </div>
                 <h1 class="secondary-header">Contact person</h1>
