updating start and end date in db

--- a/views/eventDetails.hbs
+++ b/views/eventDetails.hbs
@@ -45,7 +45,7 @@
 </div>
 
 <div class="page-title-bar">
-    <button class="back-link" id="backLink">
+    <button class="back-link" id="backLink" href="/eventList">
         <span class="button-wrapper">
             <i class="lni lni-arrow-left"></i>
         </span>
