--- a/views/layouts/form.hbs
+++ b/views/layouts/form.hbs
@@ -17,6 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+    <link rel="icon" href="/common/logo.png">
     <link rel="stylesheet" href="/common/lineicons/lineicons.css">
     <script src="/common/javascript/sidebar.js"></script>
 </head>
