fix: dynamic searching

--- a/views/teamList.hbs
+++ b/views/teamList.hbs
@@ -109,6 +109,8 @@
             <div class="members-box">
                 {{#each suppliers}}
                     {{>supplier this}}
+                {{else}}
+                    <p>No suppliers currently</p>
                 {{/each}}
             </div>
         </section>
