--- a/views/supplierCreate.hbs
+++ b/views/supplierCreate.hbs
@@ -4,19 +4,28 @@
             <div class="form-page">
                 <div class="form-row">
                     <div class="text-field-container">
-                        <label class="field-label" for="name">Name</label>
+                        <div class="field-label-container">
+                            <label class="field-label" for="name">Name</label>
+                            <span class="error-text">*Required</span>
+                        </div>
                         <input type="text" id="name" class="text-field" name="name" required>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="text-field-container">
-                        <label class="field-label" for="contact-info">Contact information</label>
+                        <div class="field-label-container">
+                            <label class="field-label" for="contact-info">Contact information</label>
+                            <span class="error-text">*Required</span>
+                        </div>
                         <input type="text" id="contact-info" class="text-field" name="contact-info" required>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="text-field-container">
-                        <label class="field-label" for="description">Description</label>
+                        <div class="field-label-container">
+                            <label class="field-label" for="description">Description</label>
+                            <span class="error-text">*Required</span>
+                        </div>
                         <textarea id="description" class="text-field" name="description" rows="6" required></textarea>
                     </div>
                 </div>
