--- a/views/eventDetails.hbs
+++ b/views/eventDetails.hbs
@@ -119,7 +119,7 @@
                 <button type="submit"><i class="lni lni-search-1"></i></button>
                     <input type="search" name="q" id="searchInput" placeholder="Search..." autocomplete="off">
                 </form>
-            <h3 class="secondary-header">Team Members</h3>
+            <h3 class="secondary-header">Available team members</h3>
             <div class="grid-controls">
             </div>
             <div class="team-mini-grid" id="participantGrid">
@@ -128,7 +128,29 @@
                     {{> teamMemberMini this}}
                     {{/each}}
                 {{else}}
-                    <p>Currently no members in this event.</p>
+                    <p>No members have marked themselves available.</p>
+                {{/if}}
+            </div>
+
+            <h3 class="secondary-header">Pending team members</h3>
+            <div class="team-mini-grid">
+                {{#if pendingMembers}}
+                    {{#each pendingMembers}}
+                        {{> teamMemberMini this}}
+                    {{/each}}
+                {{else}}
+                    <p>No pending invitations.</p>
+                {{/if}}
+            </div>
+
+            <h3 class="secondary-header">Unavailable team members</h3>
+            <div class="team-mini-grid">
+                {{#if unavailableMembers}}
+                    {{#each unavailableMembers}}
+                        {{> teamMemberMini this}}
+                    {{/each}}
+                {{else}}
+                    <p>No members have marked themselves unavailable.</p>
                 {{/if}}
             </div>
 
@@ -197,7 +219,7 @@
                     button.setAttribute('data-bio', participant.bio || '');
 
                     button.innerHTML = `
-                        <img class="team-member-mini-picture" src="/api/avatar/${member._id}" />
+                        <img class="team-member-mini-picture" src="/api/avatar/${participant._id}" />
                         <span id="full-name">${participant.firstName ?? ''} ${participant.lastName ?? ''}</span>
                         <span id="role">${participant.role || 'Team Member'}</span>
                         <i id="teamMiniAddButton" class="lni lni-plus"></i>
@@ -212,7 +234,6 @@
                     const card = document.createElement('div');
                     card.className = 'team-member-mini-card';
                     card.innerHTML = `
-                        <div class="team-member-mini-picture" style="background-image: url('')"></div>
                         <span id="full-name">${supplier.companyName}</span>
                         <span id="role">Supplier</span>
                         <i id="teamMiniAddButton" class="lni lni-plus"></i>
