status updates for backend, form validation still not working

--- a/views/editEvent.hbs
+++ b/views/editEvent.hbs
@@ -146,6 +146,7 @@
         </div>
         <input type="hidden" id="added-members-input" name="addedMembers">
         <input type="hidden" id="added-suppliers-input" name="addedSuppliers">
+        <input type="hidden" id="status-input" name="status" value="{{event.status}}">
     </form>
 </DIV>
 
