--- a/views/eventCreate.hbs
+++ b/views/eventCreate.hbs
@@ -1,5 +1,5 @@
 <div class="form-wizard card">
-    <form class="form" action="/create/createEvent" method="post">
+    <form class="form" action="/create/createEvent" method="post" id="create-event-form">
         <div class="form-page-container">
             <div class="form-page" id="detailsPage">
                 <h1 class="secondary-header">Event details</h1>
