--- a/public/common/eventCreate.css
+++ b/public/common/eventCreate.css
@@ -99,6 +99,10 @@
     height: 50%;
 }
 
+#supplierSearchForm, #memberSearchForm {
+    flex-grow: 0;
+}
+
 @media screen and (max-width: 800px) {
     .form-wizard {
         padding-bottom: 50vh;
